Add deploy-local target for local testing
Still needs a good way to get the install parameters
into the install script.

--- a/build.properties
+++ b/build.properties
@@ -21,3 +21,5 @@ deps.dir=${basedir}/../dependencies
 tests.dir=${basedir}/tests
 
 client.build.file=${scripts.dir}/client.build.js
+
+deploy.local.dir=${basedir}/deploy-local
