--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,10 +1,12 @@
 file.reference.text-prism-.git=.git
 file.reference.text-prism-build=build
+file.reference.text-prism-deploy-local=deploy-local
 file.reference.text-prism-dist=dist
 ignore.path=\
     ${file.reference.text-prism-build}:\
     ${file.reference.text-prism-.git}:\
-    ${file.reference.text-prism-dist}
+    ${file.reference.text-prism-dist}:\
+    ${file.reference.text-prism-deploy-local}
 include.path=\
     ${php.global.include.path}
 php.version=PHP_53
