--- a/build.xml
+++ b/build.xml
@@ -131,7 +131,6 @@
         <mkdir dir="${build.logs.dir}"/>
 
         <mkdir dir="${build.dir}/code-browser"/>
-        <mkdir dir="${build.dir}/pdepend"/>
         <mkdir dir="${build.dir}/phpcs"/>
     </target>
 
@@ -156,23 +155,20 @@
     </target>
 
     <target name="server-tools" description="Runs the server quality assurance tools"
-            depends="prepare,phplint,phploc,pdepend,phpmd,phpcs,phpcpd">
+            depends="prepare,phplint,phploc,phpmd,phpcs,phpcpd">
         <antcall target="phpcb"/>
     </target>
 
     <target name="client-tools" depends="prepare,jshint,csslint">
     </target>
 
-    <target name="-tools-ci" depends="phploc,pdepend,-phpmd-ci,-phpcs-ci,phpcpd,-jshint-ci,-csslint-ci">
+    <target name="-tools-ci" depends="phploc,-phpmd-ci,-phpcs-ci,phpcpd,-jshint-ci,-csslint-ci">
     </target>
 
     <!-- Run tools in parallel -->
     <target name="-tools-ci-parallel">
         <parallel threadCount="2">
-            <sequential>
-                <antcall target="pdepend"/>
-                <antcall target="-phpmd-ci"/>
-            </sequential>
+            <antcall target="-phpmd-ci"/>
             <antcall target="phpcpd"/>
             <antcall target="-phpcs-ci"/>
             <antcall target="phploc"/>
@@ -328,14 +324,15 @@
         </exec>
     </target>
 
+<!--    Build server doesn't support this yet
     <target name="pdepend" description="Calculate software metrics using PHP_Depend">
         <exec executable="pdepend${pear.ext}">
-            <arg value="--jdepend-xml=${build.logs.dir}/jdepend.xml" />
-            <arg value="--jdepend-chart=${build.dir}/pdepend/dependencies.svg" />
-            <arg value="--overview-pyramid=${build.dir}/pdepend/overview-pyramid.svg" />
+            <arg value="\-\-jdepend-xml=${build.logs.dir}/jdepend.xml" />
+            <arg value="\-\-jdepend-chart=${build.dir}/pdepend/dependencies.svg" />
+            <arg value="\-\-overview-pyramid=${build.dir}/pdepend/overview-pyramid.svg" />
             <arg file="${src.dir}/server" />
         </exec>
-    </target>
+    </target>-->
 
     <target name="phpmd"
             description="Perform project mess detection using PHPMD and print human readable output. Run before committing.">
