Add marionette js dependencies
Issue #17

--- a/build.xml
+++ b/build.xml
@@ -65,8 +65,13 @@
         <mkdir dir="${build.gather.dir}/client/js/lib"/>
 
         <parallel>
+            
             <dependency name="backbone" dest="${build.gather.dir}/client"/>
             <dependency name="backbone-relational" dest="${build.gather.dir}/client"/>
+            <dependency name="backbone.eventbinder" dest="${build.gather.dir}/client"/>
+            <dependency name="backbone.marionette" dest="${build.gather.dir}/client"/>
+            <dependency name="backbone.wreqr" dest="${build.gather.dir}/client"/>
+            
             <dependency name="blueprint" dest="${build.gather.dir}/client"/>
             <dependency name="color" dest="${build.gather.dir}/client"/>
             <dependency name="d3" dest="${build.gather.dir}/client"/>
