Add local-all target and set to default.
local-all runs build, dist, and deploy-local
Set default target to local-all, so you can
just run `ant` to do everything for local testing.

--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="Text Prism" default="dist">
+<project name="Text Prism" default="local-all">
 
     <!-- Get a build time -->
     <tstamp>
@@ -655,4 +655,6 @@
         </exec>
     </target>
 
+    <target name="local-all" depends="build,dist,deploy-local">
+    </target>
 </project>
