--- a/build.xml
+++ b/build.xml
@@ -65,13 +65,11 @@
         <mkdir dir="${build.gather.dir}/client/js/lib"/>
 
         <parallel>
-            
+
             <dependency name="backbone" dest="${build.gather.dir}/client"/>
             <dependency name="backbone-relational" dest="${build.gather.dir}/client"/>
-            <dependency name="backbone.eventbinder" dest="${build.gather.dir}/client"/>
             <dependency name="backbone.marionette" dest="${build.gather.dir}/client"/>
-            <dependency name="backbone.wreqr" dest="${build.gather.dir}/client"/>
-            
+
             <dependency name="blueprint" dest="${build.gather.dir}/client"/>
             <dependency name="color" dest="${build.gather.dir}/client"/>
             <dependency name="d3" dest="${build.gather.dir}/client"/>
@@ -89,6 +87,7 @@
             <dependency name="jqueryui" dest="${build.gather.dir}/client"/>
             <dependency name="jqueryui.timepicker" dest="${build.gather.dir}/client"/>
             <dependency name="requirejs" dest="${build.gather.dir}/client"/>
+            <dependency name="requirejs-text" dest="${build.gather.dir}/client"/>
             <dependency name="slickgrid" dest="${build.gather.dir}/client"/>
             <dependency name="spin" dest="${build.gather.dir}/client"/>
             <dependency name="underscore" dest="${build.gather.dir}/client"/>
