Run deploy-local during refresh
This means "ant refresh" will do a minimal local deploy
when only source files have changed.

--- a/build.xml
+++ b/build.xml
@@ -517,6 +517,8 @@
         <copy todir="${dist.dir}/assets">
             <fileset dir="${build.gather.dir}/client"/>
         </copy>
+
+        <antcall target="deploy-local"/>
     </target>
 
 
