replace prism with prizm in project files

--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,5 @@
-app.name=Text Prism
-app.shortname=textprism
+app.name=Text Prizm
+app.shortname=textprizm
 app.version=0.2.0
 app.environment=development
 
