--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="Text Prism" default="local-all">
+<project name="Text Prizm" default="local-all">
 
     <!-- Get a build time -->
     <tstamp>
@@ -527,7 +527,7 @@
         <copy todir="${deploy.local.dir}">
             <fileset dir="${dist.dir}"/>
         </copy>
-        
+
     </target>
 
 
