--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,12 +1,12 @@
-file.reference.text-prism-.git=.git
-file.reference.text-prism-build=build
-file.reference.text-prism-deploy-local=deploy-local
-file.reference.text-prism-dist=dist
+file.reference.text-prizm-.git=.git
+file.reference.text-prizm-build=build
+file.reference.text-prizm-deploy-local=deploy-local
+file.reference.text-prizm-dist=dist
 ignore.path=\
-    ${file.reference.text-prism-build}:\
-    ${file.reference.text-prism-.git}:\
-    ${file.reference.text-prism-dist}:\
-    ${file.reference.text-prism-deploy-local}
+    ${file.reference.text-prizm-build}:\
+    ${file.reference.text-prizm-.git}:\
+    ${file.reference.text-prizm-dist}:\
+    ${file.reference.text-prizm-deploy-local}
 include.path=\
     ${php.global.include.path}
 php.version=PHP_53
