Fix build_time format
Ant now saves build_time in an easily-parsible format with timezone
info.
The app_status model converts from that format to a unix timestamp.

--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 
     <!-- Get a build time -->
     <tstamp>
-        <format property="build.time" pattern="MM/dd/yyyy hh:mm aa"/>
+        <format property="build.time" pattern="yyyy-MM-dd'T'HH:mm:ss.SSSZ"/>
     </tstamp>
 
     <!-- Get the short revision code -->
