add test-client target to build.xml

--- a/build.properties
+++ b/build.properties
@@ -19,6 +19,7 @@ dist.config.dir=${dist.dir}/application/config
 deps.dir=${basedir}/../dependencies
 
 tests.dir=${basedir}/tests
+tests.client.dir = ${tests.dir}/client
 
 client.build.file=${scripts.dir}/client.build.js
 
